--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="header-container">
+        
+        <div class="logo-header">
+            <img src="imgs/logoif.png" id="logo"/>
+        </div>
+
+        <div class="texto-header">
+            <h1 id="cabeçalho">Instituto Federal de Educação, Ciência e Tecnologia <br> Sudeste de Minas Gerais <br> Núcleo Informática - Campus Juiz de Fora <br> Ciclo de Debates 2023</h1>
+        </div>
+    </div>
+
+    <hr>
+
+    <div class="content-container">
+
+        <div class="titulo-content">
+            <h1 id="titulo">Avaliação Do Debate</h1>
+        </div>
+
+    </div>
     
 </body>
 </html>
