--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,7 +26,158 @@
             <h1 id="titulo">Avaliação Do Debate</h1>
         </div>
 
+        <br>
+
+        <form action="https://jkorpela.fi/cgi-bin/echo.cgi" method="POST">
+
+        <div class="ranking">
+            <p>Qual nota, entre 0 e 10, você avalia o debate?</p>
+            <br>
+            <ul>
+                <li><input type="radio" name="questao1" id="radio0" value="0" required><label for="radio0">0</label></li>
+                <li><input type="radio" name="questao1" id="radio1" value="1"><label for="radio1">1</label></li>
+                <li><input type="radio" name="questao1" id="radio2" value="2"><label for="radio2">2</label></li>
+                <li><input type="radio" name="questao1" id="radio3" value="3"><label for="radio3">3</label></li>
+                <li><input type="radio" name="questao1" id="radio4" value="4"><label for="radio4">4</label></li>
+                <li><input type="radio" name="questao1" id="radio5" value="5"><label for="radio5">5</label></li>
+                <li><input type="radio" name="questao1" id="radio6" value="6"><label for="radio6">6</label></li>
+                <li><input type="radio" name="questao1" id="radio7" value="7"><label for="radio7">7</label></li>
+                <li><input type="radio" name="questao1" id="radio8" value="8"><label for="radio8">8</label></li>
+                <li><input type="radio" name="questao1" id="radio9" value="9"><label for="radio9">9</label></li>
+                <li><input type="radio" name="questao1" id="radio10" value="10"><label for="radio10">10</label></li>
+            </ul>
+        </div>
+
+        <br>
+        <br>
+        <br>
+        <hr>
+
+        <div class="ranking">
+            <p>Qual nota, entre 0 e 10, você avalia os participantes?</p>
+            <br>
+            <ul>
+                <li><input type="radio" name="questao2" id="radio0" value="0" required><label for="radio0">0</label></li>
+                <li><input type="radio" name="questao2" id="radio1" value="1"><label for="radio1">1</label></li>
+                <li><input type="radio" name="questao2" id="radio2" value="2"><label for="radio2">2</label></li>
+                <li><input type="radio" name="questao2" id="radio3" value="3"><label for="radio3">3</label></li>
+                <li><input type="radio" name="questao2" id="radio4" value="4"><label for="radio4">4</label></li>
+                <li><input type="radio" name="questao2" id="radio5" value="5"><label for="radio5">5</label></li>
+                <li><input type="radio" name="questao2" id="radio6" value="6"><label for="radio6">6</label></li>
+                <li><input type="radio" name="questao2" id="radio7" value="7"><label for="radio7">7</label></li>
+                <li><input type="radio" name="questao2" id="radio8" value="8"><label for="radio8">8</label></li>
+                <li><input type="radio" name="questao2" id="radio9" value="9"><label for="radio9">9</label></li>
+                <li><input type="radio" name="questao2" id="radio10" value="10"><label for="radio10">10</label></li>
+            </ul>
+        </div>
+
+        <br>
+        <br>
+        <br>
+        <hr>
+
+        <div class="perguntas">
+            <p>Considera essa iniciativa importante para os cursos de Sistemas de Informação?</p>
+            <br>
+            <ul>
+                <li><input type="radio" name="pergunta1" id="não" value="não" required><label for="não">não</label></li>
+                <li><input type="radio" name="pergunta1" id="sim" value="sim"><label for="sim">sim</label></li>
+            </ul>
+        </div>
+
+        <br>
+        <br>
+        <br>
+        <hr>
+
+        <div class="perguntas">
+            <p>Gostaria que houvesse outros debates?</p>
+            <br>
+            <ul>
+                <li><input type="radio" name="pergunta2" id="não" value="não" required><label for="não">não</label></li>
+                <li><input type="radio" name="pergunta2" id="sim" value="sim"><label for="sim">sim</label></li>
+            </ul>
+        </div>
+
+        <br>
+        <br>
+        <br>
+        <hr>
+
+        <div class="perguntas">
+            <p>Considera o formato do debate apropriado?</p>
+            <br>
+            <ul>
+                <li><input type="radio" name="pergunta3" id="não" value="não" required><label for="não">não</label></li>
+                <li><input type="radio" name="pergunta3" id="sim" value="sim"><label for="sim">sim</label></li>
+            </ul>
+        </div>
+
+        <br>
+        <br>
+        <br>
+        <hr>
+
+        <div class="perguntas">
+            <p>Considera o horário do debate apropriado?</p>
+            <br>
+            <ul>
+                <li><input type="radio" name="pergunta4" id="não" value="não" required><label for="não">não</label></li>
+                <li><input type="radio" name="pergunta4" id="sim" value="sim"><label for="sim">sim</label></li>
+            </ul>
+        </div>
+
+        <br>
+        <br>
+        <br>
+        <hr>
+
+        <div class="perguntas">
+            <p>Gostaria que o debate fosse transmitido on-line?</p>
+            <br>
+            <ul>
+                <li><input type="radio" name="pergunta5" id="não" value="não" required><label for="não">não</label></li>
+                <li><input type="radio" name="pergunta5" id="sim" value="sim"><label for="sim">sim</label></li>
+            </ul>
+        </div>
+
+        <br>
+        <br>
+        <br>
+        <hr>
+
+        <div class="perguntas">
+            <p>Gostaria que os debates estivessem disponíveis on-line?</p>
+            <br>
+            <ul>
+                <li><input type="radio" name="pergunta6" id="não" value="não" required><label for="não">não</label></li>
+                <li><input type="radio" name="pergunta6" id="sim" value="sim"><label for="sim">sim</label></li>
+            </ul>
+        </div>
+
+        <br>
+        <br>
+        <br>
+        <hr>
+
+        <div class="perguntas">
+            <p>Quais sugestões gostaria de deixar para a organização?</p>
+            <br>
+            <textarea id="sugestão" name="sugestão"></textarea>
+        </div>
+
     </div>
+
+    <br>
+    <hr>
+    <br>
     
+    <button type="submit" id="botão">Enviar</button>
+
+    <br>
+    <br>
+    <br>
+    
+    </form>
 </body>
 </html>
