--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
 
         <div class="texto-header">
-            <h1 id="cabeçalho">Instituto Federal de Educação, Ciência e Tecnologia <br> Sudeste de Minas Gerais <br> Núcleo Informática - Campus Juiz de Fora <br> Ciclo de Debates 2023</h1>
+            <h1 id="cabecalho">Instituto Federal de Educação, Ciência e Tecnologia <br> Sudeste de Minas Gerais <br> Núcleo Informática - Campus Juiz de Fora <br> Ciclo de Debates 2023</h1>
         </div>
     </div>
 
