ajustes e pagina de agradecimento

--- a/agradecimento.html
+++ b/agradecimento.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Agradecimento</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.bunny.net/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
+    <style>
 
+        .message-container {
+            background-color: #ffffff;
+            border-radius: 10px;
+            padding: 20px;
+            box-shadow: 0px 5px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        h1 {
+            margin-bottom: 10px;
+        }
+
+        .back-link {
+            display: inline-block;
+            color: #007bff;
+            text-decoration: none;
+            border-bottom: 1px solid #007bff;
+            transition: border-bottom 0.2s;
+        }
+
+        .back-link:hover {
+            border-bottom: none;
+        }
+    </style>
+</head>
+<body>
+    <div class="message-container">
+        <h1>Obrigado pelo feedback!</h1>
+    </div>
+</body>
+</html>
