--- a/index.html
+++ b/index.html
@@ -3,15 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Formulário</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.bunny.net/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
     <script src="script.js"></script>
-    <style>
-        body {
-            font-family: 'Nunito', sans-serif;
-        }
-    </style>
 </head>
 <body>
     <div class="header-container">
@@ -170,7 +165,7 @@
         <div class="perguntas">
             <p>[9]Quais sugestões gostaria de deixar para a organização?</p>
             <br>
-            <textarea id="sugestao" name="sugestao"></textarea>
+            <textarea id="sugestao" maxlength="500" name="sugestao"></textarea>
         </div>
 
     </div>
