Formulário com bolinhas coloridas

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         <div class="perguntas">
             <p>Considera essa iniciativa importante para os cursos de Sistemas de Informação?</p>
             <ul>
-                <li><input type="radio" name="questao3" id="sim" value="sim"><label><p>sim</p></label></li>
-                <li><input type="radio" name="questao3" id="não" value="nao" required><label><p>não</p></label></li>
+                <li><input type="radio" name="questao3" id="sim" value="sim"><label><p>Sim</p></label></li>
+                <li><input type="radio" name="questao3" id="não" value="nao" required><label><p>Não</p></label></li>
             </ul>
         </div>
         <br>
@@ -84,8 +84,8 @@
         <div class="perguntas">
             <p>Gostaria que houvesse outros debates?</p>
             <ul>
-                <li><input type="radio" name="questao4" id="sim" value="sim"><label><p>sim</p></label></li>
-                <li><input type="radio" name="questao4" id="não" value="nao" required><label><p>não</p></label></li>
+                <li><input type="radio" name="questao4" id="sim" value="sim"><label><p>Sim</p></label></li>
+                <li><input type="radio" name="questao4" id="não" value="nao" required><label><p>Não</p></label></li>
             </ul>
         </div>
         <br>
@@ -96,8 +96,8 @@
         <div class="perguntas">
             <p>Considera o formato do debate apropriado?</p>
             <ul>
-                <li><input type="radio" name="questao5" id="sim" value="sim"><label><p>sim</p></label></li>
-                <li><input type="radio" name="questao5" id="não" value="nao" required><label><p>não</p></label></li>
+                <li><input type="radio" name="questao5" id="sim" value="sim"><label><p>Sim</p></label></li>
+                <li><input type="radio" name="questao5" id="não" value="nao" required><label><p>Não</p></label></li>
             </ul>
         </div>
         <br>
@@ -108,8 +108,8 @@
         <div class="perguntas">
             <p>Considera o horário do debate apropriado?</p>
             <ul>
-                <li><input type="radio" name="questao6" id="sim" value="sim"><label><p>sim</p></label></li>
-                <li><input type="radio" name="questao6" id="não" value="nao" required><label><p>não</p></label></li>
+                <li><input type="radio" name="questao6" id="sim" value="sim"><label><p>Sim</p></label></li>
+                <li><input type="radio" name="questao6" id="não" value="nao" required><label><p>Não</p></label></li>
             </ul>
         </div>
         <br>
@@ -120,8 +120,8 @@
         <div class="perguntas">
             <p>Gostaria que o debate fosse transmitido on-line?</p>
             <ul>
-                <li><input type="radio" name="questao7" id="sim" value="sim"><label><p>sim</p></label></li>
-                <li><input type="radio" name="questao7" id="não" value="nao" required><label><p>não</p></label></li>
+                <li><input type="radio" name="questao7" id="sim" value="sim"><label><p>Sim</p></label></li>
+                <li><input type="radio" name="questao7" id="não" value="nao" required><label><p>Não</p></label></li>
             </ul>
         </div>
         <br>
@@ -132,8 +132,8 @@
         <div class="perguntas">
             <p>Gostaria que os debates ficassem disponíveis on-line depois?</p>
             <ul>
-                <li><input type="radio" name="questao8" id="sim" value="sim"><label><p>sim</p></label></li>
-                <li><input type="radio" name="questao8" id="não" value="nao" required><label><p>não</p></label></li>
+                <li><input type="radio" name="questao8" id="sim" value="sim"><label><p>Sim</p></label></li>
+                <li><input type="radio" name="questao8" id="não" value="nao" required><label><p>Não</p></label></li>
             </ul>
         </div>
         <br>
